more work on MSA viewer